--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pimoroni Blinkt! NodeJS bindings. Based on node-blinkt. Updated for Node > 8.",
   "main": "Blinkt.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node example/index.js",
     "precommit": "pretty-quick --staged"
   },
   "repository": {
